<resources>
    <string name="app_name">Proiect</string>

    <string name="login_text">Login</string>
    <string name="sing_out">Sing Out</string>
    <string name="reset_list">Reset List</string>
    <string name="clear_favorites">Clear Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="chat_with_us">Chat with us!</string>
    <string name="chat_menu_design_1">Design 1</string>
    <string name="chat_menu_design_2">Design 2</string>
    <string name="chat_menu_both_designs">Both designs</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="ALl">All</string>
    <string name="All">All</string>
    <string name="Christmas">Christmas</string>
    <string name="Programming">Programming</string>
    <string name="Miscellaneous">Miscellaneous</string>
    <string name="Dark">Dark</string>
    <string name="Pun">Pun</string>
    <string name="Spooky">Spooky</string>
    <string name="Favorites">Favorites</string>
</resources>