<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JokeActivity">

    <TextView
        android:id="@+id/greetingsUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Hello"
        android:textColor="@color/blue"
        android:textSize="28sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread"

        />

    <Button
        android:id="@+id/All"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/All"

        app:layout_constraintTop_toBottomOf="@id/greetingsUser"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Christmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Christmas"

        app:layout_constraintTop_toBottomOf="@id/All"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Programming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Programming"

        app:layout_constraintTop_toBottomOf="@id/Christmas"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Miscellaneous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Miscellaneous"

        app:layout_constraintTop_toBottomOf="@id/Programming"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dark"

        app:layout_constraintTop_toBottomOf="@id/Miscellaneous"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Pun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pun"

        app:layout_constraintTop_toBottomOf="@id/Dark"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Spooky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Spooky"

        app:layout_constraintTop_toBottomOf="@id/Pun"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Favorites"

        app:layout_constraintTop_toBottomOf="@id/Spooky"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>